test/e2e/testmanifests/middleware-keymatch.yml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: casbin-auth-keymatch
  namespace: traefik
spec:
  forwardAuth:
    address: http://casbin-auth-keymatch.casbin-auth.svc.cluster.local/v1/auth
    trustForwardHeader: true
    authResponseHeaders:
      - X-Casbin-Auth-JWT
      - WWW-Authenticate
